fix: modal scrollbar accessibility on Windows

--- a/src/components/modal/styles/modal-frame.scss
+++ b/src/components/modal/styles/modal-frame.scss
@@ -1,13 +1,28 @@
-.modal-container {
+// Windows scrollbar offset hack
+.modal-wrapper {
+    display: table;
     position: absolute;
     top: 0;
-    bottom: 0;
     left: 0;
-    right: 0;
+    width: 100%;
+    height: 100%;
     // This prevents FF from allowing the wrapper to be scrollable
     // since it is animating from offscreen in the "hidden" part of
     // this container.
     // overflow: hidden;
+
+    &::after {
+        content: '';
+        display: block;
+        visibility: hidden;
+        overflow-y: scroll;
+    }
+}
+
+.modal-container {
+    display: table-cell;
+    width: 100%;
+    position: relative;
 
     &.show {
         .wrapper {
@@ -43,8 +58,11 @@
     position: absolute;
     top: 0;
     left: 0;
-    bottom: 0;
-    right: 0;
+    // Important: This forces the wrapper to be the entire width of the screen
+    // which is needed in Windows due ot the scrollbar offset hack used
+    // on the parent container
+    width: 100vw;
+    height: 100vh;
     transition: transform 350ms;
     transform: translateY(100%);
 }
